update personnel, academics, centers and formations view

--- a/lang/en.json
+++ b/lang/en.json
@@ -138,5 +138,32 @@
     "Politique de confidentialité": "Privacy policy",
     "Mentions légales": "Legal notice",
     "CGU": "Terms of use",
-    "Langue": "Language"
+    "Langue": "Language",
+    "Modifier l'utilisateur": "Edit User",
+    "Informations personnelles": "Personal Information",
+    "Prénom": "First Name",
+    "Nom": "Last Name",
+    "Ville": "City",
+    "Sélectionner une ville": "Select a city",
+    "Adresse": "Address",
+    "Sécurité et rôle": "Security and Role",
+    "Nouveau mot de passe": "New Password",
+    "Laissez vide pour conserver le mot de passe actuel": "Leave empty to keep current password",
+    "Confirmer le mot de passe": "Confirm Password",
+    "Rôle": "Role",
+    "Statut": "Status",
+    "Permissions du rôle": "Role Permissions",
+    "Actif": "Active",
+    "En attente de validation": "Pending Validation",
+    "En attente de finalisation": "Pending Finalization",
+    "Suspendu": "Suspended",
+    "Rejeté": "Rejected",
+    "Archivé": "Archived",
+    "Retour": "Back",
+    "Réinitialiser": "Reset",
+    "Enregistrer": "Save",
+    "Enregistrer les modifications": "Save Changes",
+    "Ce champ est obligatoire": "This field is required",
+    "Utilisateur mis à jour avec succès": "User successfully updated",
+    "Une erreur est survenue lors de la mise à jour de l'utilisateur": "An error occurred while updating the user"
 }
