--- a/lang/fr.json
+++ b/lang/fr.json
@@ -137,5 +137,32 @@
     "Privacy policy": "Politique de confidentialité",
     "Legal notice": "Mentions légales",
     "Terms of use": "CGU",
-    "Language": "Langue"
+    "Language": "Langue",
+    "Edit User": "Modifier l'utilisateur",
+    "Personal Information": "Informations personnelles",
+    "First Name": "Prénom",
+    "Last Name": "Nom",
+    "City": "Ville",
+    "Select a city": "Sélectionner une ville",
+    "Address": "Adresse",
+    "Security and Role": "Sécurité et rôle",
+    "New Password": "Nouveau mot de passe",
+    "Leave empty to keep current password": "Laissez vide pour conserver le mot de passe actuel",
+    "Confirm Password": "Confirmer le mot de passe",
+    "Role": "Rôle",
+    "Status": "Statut",
+    "Role Permissions": "Permissions du rôle",
+    "Active": "Actif",
+    "Pending Validation": "En attente de validation",
+    "Pending Finalization": "En attente de finalisation",
+    "Suspended": "Suspendu",
+    "Rejected": "Rejeté",
+    "Archived": "Archivé",
+    "Back": "Retour",
+    "Reset": "Réinitialiser",
+    "Save": "Enregistrer",
+    "Save Changes": "Enregistrer les modifications",
+    "This field is required": "Ce champ est obligatoire",
+    "User successfully updated": "Utilisateur mis à jour avec succès",
+    "An error occurred while updating the user": "Une erreur est survenue lors de la mise à jour de l'utilisateur"
 }
